[package]
name = "item-waterway-solver"
version = "1.0.1"
edition = "2024"
description = "Rust backend for Minecraft 1.17.1 item water-stream simulation, search, and viewer service"
readme = "../README.md"

[dependencies]
csv = "1.4"
flate2 = "1.0"
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["formatting", "local-offset", "parsing"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Storage_FileSystem",
  "Win32_System_Console",
  "Win32_System_Threading",
  "Win32_UI_WindowsAndMessaging",
] }
